fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -31,16 +31,18 @@ div {
 
 div.red {
     background-color: #ff8a8a;
-    text-justify: right;
+    text-align: right;
     margin-left: 50px;
-    border: 0px 0px 3px 10px;
+    border-bottom: 3px;
+    border-left: 10px;
 }
 
 div.blue {
     background-color: #6ae0ff;
-    text-justify: left;
+    text-align: left;
     margin-right: 50px;
-    border: 0px 10px 3px 0px;
+    border-right: 10px;
+    border-bottom: 3px;
 }
 
 span {
